@@ -4,6 +4,7 @@
 	* migrating to ruby-debug-ide
 	* ability to pass base directory (needed e.g. for Rails debugging)
 	* ability to disable/enable a breakpoint
+	* addition of RubyThread.runTo(path, line) feature
 
 0.7.0 - 0.7.1
 -------------
